# camsim

./: .gitignore  .pdm-python  README.md  pyproject.toml
resource/: board.json
src/camsim/: plot_pattern.py  plot_truth.py  sim.py
