[project]
name = "camsim"
version = "0.1.0"
description = "Default template for PDM package"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy<2,>=1.19.3",
    "opencv-python>=4.11.0.86",
    "pyrender>=0.1.45",
    "trimesh>=4.5.3",
    "pyQt6>=6.8.1",
    "typer>=0.15.2",
]
authors = []
license = {text = "MIT"}

[tool.pdm]
distribution = false

